--- a/test-output/index.html
+++ b/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\seleniumuser1\AppData\Local\Temp\2\testng-eclipse--816075589\testng-customsuite.xml</span>
+                    <span>C:\Users\SGARG5\AppData\Local\Temp\testng-eclipse-2131885162\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,21 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
-                    </span>
-                    <div class="method-list-content passed suite-Default_suite">
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="runClasses.CTPQATC1" hash-for-method="landing_Page">landing_Page</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
+                    <span class="method-stats">0 methods,   </span>
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -116,25 +102,10 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">runClasses.CTPQATC1</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="landing_Page">
-                  </a> <!-- landing_Page -->
-                  <span class="method-name">landing_Page</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\seleniumuser1\AppData\Local\Temp\2\testng-eclipse--816075589\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SGARG5\AppData\Local\Temp\testng-eclipse-2131885162\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -143,7 +114,52 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
+      &lt;class name=&quot;pageClasses.reviewAndSend&quot;/&gt;
+      &lt;class name=&quot;libraryClasses.ScriptVideoRecord&quot;/&gt;
+      &lt;class name=&quot;pageObjectClasses.PGO_VehicleDetails&quot;/&gt;
+      &lt;class name=&quot;runClasses.RSGDEVTC1&quot;/&gt;
+      &lt;class name=&quot;libraryClasses.FuncitonLibrary&quot;/&gt;
+      &lt;class name=&quot;pageObjectClasses.PGO_questionsTab&quot;/&gt;
+      &lt;class name=&quot;pageClasses.VehicleDetails&quot;/&gt;
+      &lt;class name=&quot;pageObjectClasses.PGO_SpecialOffers&quot;/&gt;
+      &lt;class name=&quot;pageClasses.kbbTradeIn&quot;/&gt;
+      &lt;class name=&quot;utilityClasses.ExcelUtilityClass&quot;/&gt;
+      &lt;class name=&quot;utilityClasses.EnvironmentVariables&quot;/&gt;
+      &lt;class name=&quot;pageObjectClasses.PGO_PaymentCalculator&quot;/&gt;
+      &lt;class name=&quot;pageClasses.PaymentCalculator&quot;/&gt;
+      &lt;class name=&quot;utilityClasses.ScreenShot&quot;/&gt;
+      &lt;class name=&quot;pageClasses.rsg_DriverClass&quot;/&gt;
+      &lt;class name=&quot;pageObjectClasses.PGO_reviewAndSend&quot;/&gt;
+      &lt;class name=&quot;runClasses.RSGINTTC8&quot;/&gt;
+      &lt;class name=&quot;pageClasses.landing_Page&quot;/&gt;
+      &lt;class name=&quot;runClasses.RSGINTTC6&quot;/&gt;
+      &lt;class name=&quot;pageClasses.vehicleCards&quot;/&gt;
+      &lt;class name=&quot;pageClasses.creditForm&quot;/&gt;
+      &lt;class name=&quot;runClasses.RSGINTTC4&quot;/&gt;
+      &lt;class name=&quot;runClasses.RSGINTTC2&quot;/&gt;
+      &lt;class name=&quot;libraryClasses.SpecializedScreenRecorder&quot;/&gt;
+      &lt;class name=&quot;pageObjectClasses.PGO_creditForm&quot;/&gt;
+      &lt;class name=&quot;runClasses.RSGINTTC1&quot;/&gt;
+      &lt;class name=&quot;pageObjectClasses.PGO_vehicleCards&quot;/&gt;
+      &lt;class name=&quot;pageClasses.questionsTab&quot;/&gt;
+      &lt;class name=&quot;runClasses.CTPINTTC1&quot;/&gt;
+      &lt;class name=&quot;utilityClasses.ExtentReportManager&quot;/&gt;
+      &lt;class name=&quot;pageClasses.vehicleFlyout&quot;/&gt;
       &lt;class name=&quot;runClasses.CTPQATC1&quot;/&gt;
+      &lt;class name=&quot;pageClasses.signIn&quot;/&gt;
+      &lt;class name=&quot;pageObjectClasses.PGO_signIn&quot;/&gt;
+      &lt;class name=&quot;runClasses.RSGINTTC7&quot;/&gt;
+      &lt;class name=&quot;runClasses.RSGINTTC5&quot;/&gt;
+      &lt;class name=&quot;pageObjectClasses.PGO_kbbTradeIn&quot;/&gt;
+      &lt;class name=&quot;pageObjectClasses.PGO_searchInventoryNG&quot;/&gt;
+      &lt;class name=&quot;pageObjectClasses.PGO_landing_page&quot;/&gt;
+      &lt;class name=&quot;pageObjectClasses.PGO_chat&quot;/&gt;
+      &lt;class name=&quot;pageObjectClasses.PGO_vehicleFlyOut&quot;/&gt;
+      &lt;class name=&quot;pageObjectClasses.PGO_creditApp&quot;/&gt;
+      &lt;class name=&quot;runClasses.RSGQATC1&quot;/&gt;
+      &lt;class name=&quot;pageClasses.chat&quot;/&gt;
+      &lt;class name=&quot;pageClasses.creditApp&quot;/&gt;
+      &lt;class name=&quot;runClasses.RSGINTTC3&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -157,7 +173,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (1 class)</span>
+                <span class="test-name">Default test (46 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -183,16 +199,11 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
-data.setCell(0, 0, 0)
-data.setCell(0, 1, 'landing_Page')
-data.setCell(0, 2, 'runClasses.CTPQATC1')
-data.setCell(0, 3, 279959);
+data.addRows(0);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -217,24 +228,6 @@ return data;
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="chronological-class">
-              <div class="chronological-class-name">runClasses.CTPQATC1</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">getDriver</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">landing_Page</span>
-                <span class="method-start">6825 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-test after">
-                <span class="method-name">closeDriver</span>
-                <span class="method-start">286784 ms</span>
-              </div> <!-- configuration-test after -->
-              <div class="configuration-suite after">
-                <span class="method-name">closebrowsers</span>
-                <span class="method-start">289138 ms</span>
-              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
