--- a/test-output/index.html
+++ b/test-output/index.html
@@ -36,8 +36,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" class="navigator-link" panel-name="suite-Default_suite">
-              <span class="suite-name border-passed">Default suite</span>
+            <a href="#" class="navigator-link" panel-name="suite-TestSuite">
+              <span class="suite-name border-skipped">TestSuite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -47,37 +47,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\SGARG5\AppData\Local\Temp\testng-eclipse-2131885162\testng-customsuite.xml</span>
+                  <a href="#" class="navigator-link " panel-name="test-xml-TestSuite">
+                    <span>C:\Users\SGARG5\Documents\test-project\RSG\testng2.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="testlist-Default_suite">
+                  <a href="#" class="navigator-link " panel-name="testlist-TestSuite">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="group-Default_suite">
+                  <a href="#" class="navigator-link " panel-name="group-TestSuite">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="times-Default_suite">
+                  <a href="#" class="navigator-link " panel-name="times-TestSuite">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="reporter-Default_suite">
+                  <a href="#" class="navigator-link " panel-name="reporter-TestSuite">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="ignored-methods-Default_suite">
+                  <a href="#" class="navigator-link " panel-name="ignored-methods-TestSuite">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="chronological-Default_suite">
+                  <a href="#" class="navigator-link " panel-name="chronological-TestSuite">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -90,7 +90,26 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">0 methods,   </span>
+                    <span class="method-stats">2 methods,  2 skipped,  </span>
+                  </li>
+                  <li>
+                    <span class="method-list-title skipped">Skipped methods</span>
+                    <span class="show-or-hide-methods skipped">
+                      <a href="#" panel-name="suite-TestSuite" class="hide-methods skipped suite-TestSuite"> (hide)</a> <!-- hide-methods skipped suite-TestSuite -->
+                      <a href="#" panel-name="suite-TestSuite" class="show-methods skipped suite-TestSuite"> (show)</a> <!-- show-methods skipped suite-TestSuite -->
+                    </span>
+                    <div class="method-list-content skipped suite-TestSuite">
+                      <span>
+                        <img width="3%" src="skipped.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-TestSuite" title="runClasses.RSGINTTC2" hash-for-method="landing_Page">landing_Page</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="skipped.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-TestSuite" title="runClasses.RSGINTTC5" hash-for-method="landing_Page">landing_Page</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content skipped suite-TestSuite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -101,133 +120,156 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-Default_suite" class="panel Default_suite">
-        </div> <!-- panel Default_suite -->
-        <div panel-name="test-xml-Default_suite" class="panel">
+        <div panel-name="suite-TestSuite" class="panel TestSuite">
+          <div class="suite-TestSuite-class-skipped">
+            <div class="main-panel-header rounded-window-top">
+              <img src="skipped.png"/>
+              <span class="class-name">runClasses.RSGINTTC5</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="landing_Page">
+                  </a> <!-- landing_Page -->
+                  <span class="method-name">landing_Page</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-TestSuite-class-skipped -->
+          <div class="suite-TestSuite-class-skipped">
+            <div class="main-panel-header rounded-window-top">
+              <img src="skipped.png"/>
+              <span class="class-name">runClasses.RSGINTTC2</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="landing_Page">
+                  </a> <!-- landing_Page -->
+                  <span class="method-name">landing_Page</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-TestSuite-class-skipped -->
+        </div> <!-- panel TestSuite -->
+        <div panel-name="test-xml-TestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SGARG5\AppData\Local\Temp\testng-eclipse-2131885162\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SGARG5\Documents\test-project\RSG\testng2.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
-  &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
+&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;TestSuite&quot;&gt;
+  &lt;test name=&quot;Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;pageClasses.reviewAndSend&quot;/&gt;
-      &lt;class name=&quot;libraryClasses.ScriptVideoRecord&quot;/&gt;
-      &lt;class name=&quot;pageObjectClasses.PGO_VehicleDetails&quot;/&gt;
-      &lt;class name=&quot;runClasses.RSGDEVTC1&quot;/&gt;
-      &lt;class name=&quot;libraryClasses.FuncitonLibrary&quot;/&gt;
-      &lt;class name=&quot;pageObjectClasses.PGO_questionsTab&quot;/&gt;
-      &lt;class name=&quot;pageClasses.VehicleDetails&quot;/&gt;
-      &lt;class name=&quot;pageObjectClasses.PGO_SpecialOffers&quot;/&gt;
-      &lt;class name=&quot;pageClasses.kbbTradeIn&quot;/&gt;
-      &lt;class name=&quot;utilityClasses.ExcelUtilityClass&quot;/&gt;
-      &lt;class name=&quot;utilityClasses.EnvironmentVariables&quot;/&gt;
-      &lt;class name=&quot;pageObjectClasses.PGO_PaymentCalculator&quot;/&gt;
-      &lt;class name=&quot;pageClasses.PaymentCalculator&quot;/&gt;
-      &lt;class name=&quot;utilityClasses.ScreenShot&quot;/&gt;
-      &lt;class name=&quot;pageClasses.rsg_DriverClass&quot;/&gt;
-      &lt;class name=&quot;pageObjectClasses.PGO_reviewAndSend&quot;/&gt;
-      &lt;class name=&quot;runClasses.RSGINTTC8&quot;/&gt;
-      &lt;class name=&quot;pageClasses.landing_Page&quot;/&gt;
-      &lt;class name=&quot;runClasses.RSGINTTC6&quot;/&gt;
-      &lt;class name=&quot;pageClasses.vehicleCards&quot;/&gt;
-      &lt;class name=&quot;pageClasses.creditForm&quot;/&gt;
-      &lt;class name=&quot;runClasses.RSGINTTC4&quot;/&gt;
       &lt;class name=&quot;runClasses.RSGINTTC2&quot;/&gt;
-      &lt;class name=&quot;libraryClasses.SpecializedScreenRecorder&quot;/&gt;
-      &lt;class name=&quot;pageObjectClasses.PGO_creditForm&quot;/&gt;
-      &lt;class name=&quot;runClasses.RSGINTTC1&quot;/&gt;
-      &lt;class name=&quot;pageObjectClasses.PGO_vehicleCards&quot;/&gt;
-      &lt;class name=&quot;pageClasses.questionsTab&quot;/&gt;
-      &lt;class name=&quot;runClasses.CTPINTTC1&quot;/&gt;
-      &lt;class name=&quot;utilityClasses.ExtentReportManager&quot;/&gt;
-      &lt;class name=&quot;pageClasses.vehicleFlyout&quot;/&gt;
-      &lt;class name=&quot;runClasses.CTPQATC1&quot;/&gt;
-      &lt;class name=&quot;pageClasses.signIn&quot;/&gt;
-      &lt;class name=&quot;pageObjectClasses.PGO_signIn&quot;/&gt;
-      &lt;class name=&quot;runClasses.RSGINTTC7&quot;/&gt;
       &lt;class name=&quot;runClasses.RSGINTTC5&quot;/&gt;
-      &lt;class name=&quot;pageObjectClasses.PGO_kbbTradeIn&quot;/&gt;
-      &lt;class name=&quot;pageObjectClasses.PGO_searchInventoryNG&quot;/&gt;
-      &lt;class name=&quot;pageObjectClasses.PGO_landing_page&quot;/&gt;
-      &lt;class name=&quot;pageObjectClasses.PGO_chat&quot;/&gt;
-      &lt;class name=&quot;pageObjectClasses.PGO_vehicleFlyOut&quot;/&gt;
-      &lt;class name=&quot;pageObjectClasses.PGO_creditApp&quot;/&gt;
-      &lt;class name=&quot;runClasses.RSGQATC1&quot;/&gt;
-      &lt;class name=&quot;pageClasses.chat&quot;/&gt;
-      &lt;class name=&quot;pageClasses.creditApp&quot;/&gt;
-      &lt;class name=&quot;runClasses.RSGINTTC3&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Default test --&gt;
-&lt;/suite&gt; &lt;!-- Default suite --&gt;
+  &lt;/test&gt; &lt;!-- Test --&gt;
+&lt;/suite&gt; &lt;!-- TestSuite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-Default_suite" class="panel">
+        <div panel-name="testlist-TestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for Default suite</span>
+            <span class="header-content">Tests for TestSuite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (46 classes)</span>
+                <span class="test-name">Test (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-Default_suite" class="panel">
+        <div panel-name="group-TestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for Default suite</span>
+            <span class="header-content">Groups for TestSuite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-Default_suite" class="panel">
+        <div panel-name="times-TestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for Default suite</span>
+            <span class="header-content">Times for TestSuite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_Default_suite');
-function tableData_Default_suite() {
+suiteTableInitFunctions.push('tableData_TestSuite');
+function tableData_TestSuite() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(0);
-window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
+data.addRows(2);
+data.setCell(0, 0, 0)
+data.setCell(0, 1, 'landing_Page')
+data.setCell(0, 2, 'runClasses.RSGINTTC2')
+data.setCell(0, 3, 0);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'landing_Page')
+data.setCell(1, 2, 'runClasses.RSGINTTC5')
+data.setCell(1, 3, 0);
+window.suiteTableData['TestSuite']= { tableData: data, tableDiv: 'times-div-TestSuite'}
 return data;
 }
               </script>
-              <div id="times-div-Default_suite">
-              </div> <!-- times-div-Default_suite -->
+              <span class="suite-total-time">Total running time: 0 ms</span>
+              <div id="times-div-TestSuite">
+              </div> <!-- times-div-TestSuite -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-Default_suite" class="panel">
+        <div panel-name="reporter-TestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for Default suite</span>
+            <span class="header-content">Reporter output for TestSuite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-Default_suite" class="panel">
+        <div panel-name="ignored-methods-TestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">2 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">runClasses.RSGINTTC5</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">closeDriver</span>
+                <br/>
+                <span class="ignored-method-name">closebrowsers</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-Default_suite" class="panel">
+        <div panel-name="chronological-TestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="chronological-class">
+              <div class="chronological-class-name">runClasses.RSGINTTC2</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">getDriver</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">landing_Page</span>
+                <span class="method-start">5871 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">runClasses.RSGINTTC5</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">landing_Page</span>
+                <span class="method-start">5875 ms</span>
+              </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
