--- a/test-output/old/TestSuite/classes.html
+++ b/test-output/old/TestSuite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>runClasses.CTPQATC1</td>
+<td>runClasses.RSGINTTC5</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -30,7 +30,7 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>runClasses.CTPINTTC1</td>
+<td>runClasses.RSGINTTC2</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
