--- a/test-output/old/TestSuite/methods-alphabetical.html
+++ b/test-output/old/TestSuite/methods-alphabetical.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="94c7ba">  <td>17/11/23 12:08:24</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;rsg_DriverClass.closeDriver()[pri:0, instance:runClasses.CTPQATC1@3c0ecd4b]">&lt;&lt;closeDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@540585569</td>   <td></td> </tr>
-<tr bgcolor="94c7ba">  <td>17/11/23 10:18:00</td>   <td>-6624561</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;rsg_DriverClass.getDriver()[pri:0, instance:runClasses.CTPQATC1@3c0ecd4b]">&gt;&gt;getDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@540585569</td>   <td></td> </tr>
-<tr bgcolor="94c7ba">  <td>17/11/23 11:39:42</td>   <td>-1721887</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;rsg_DriverClass.getDriver()[pri:0, instance:runClasses.CTPINTTC1@14bf9759]">&gt;&gt;getDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@540585569</td>   <td></td> </tr>
-<tr bgcolor="8bcfcb">  <td>17/11/23 10:18:08</td>   <td>-6616379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CTPQATC1.landing_Page()[pri:0, instance:runClasses.CTPQATC1@3c0ecd4b]">landing_Page</td> 
-  <td>main@540585569</td>   <td></td> </tr>
-<tr bgcolor="e8b466">  <td>17/11/23 11:39:46</td>   <td>-1718761</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CTPINTTC1.landing_Page()[pri:0, instance:runClasses.CTPINTTC1@14bf9759]">landing_Page</td> 
-  <td>main@540585569</td>   <td></td> </tr>
+<tr bgcolor="f5e5e3">  <td>17/11/28 16:39:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;rsg_DriverClass.getDriver()[pri:0, instance:runClasses.RSGINTTC2@3abbfa04]">&gt;&gt;getDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>17/11/28 16:40:04</td>   <td>5869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RSGINTTC2.landing_Page()[pri:0, instance:runClasses.RSGINTTC2@3abbfa04]">landing_Page</td> 
+  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="62aa67">  <td>17/11/28 16:40:04</td>   <td>5873</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RSGINTTC5.landing_Page()[pri:0, instance:runClasses.RSGINTTC5@57fffcd7]">landing_Page</td> 
+  <td>main@2114650936</td>   <td></td> </tr>
 </table>
